Support price request

--- a/src/demo_clients/js/index.html
+++ b/src/demo_clients/js/index.html
@@ -63,6 +63,7 @@
       <input class="btn" type="button" value="block_info" onclick="fillCommand(4);" />
       <input class="btn" type="button" value="pending" onclick="fillCommand(5);" />
       <input class="btn" type="button" value="representatives_online" onclick="fillCommand(6);" />
+      <input class="btn" type="button" value="price" onclick="fillCommand(7);" />
     </div>
     <div class="main">
       <input id="myInput" type="text"/>
