Support token commands in JS and flask

--- a/src/demo_clients/js/index.html
+++ b/src/demo_clients/js/index.html
@@ -66,6 +66,13 @@
       <input class="btn" type="button" value="price" onclick="fillCommand(7);" />
     </div>
     <div class="main">
+      <input class="btn" type="button" value="Buy Tokens" onclick="fillCommand(8);" />
+      <input class="btn" type="button" value="Refill Tokens" onclick="fillCommand(9);" />
+      <input class="btn" type="button" value="Order Status" onclick="fillCommand(10);" />
+      <input class="btn" type="button" value="Token Status" onclick="fillCommand(11);" />
+      <input class="btn" type="button" value="Cancel Order" onclick="fillCommand(12);" />
+    </div>
+    <div class="main">
       <input id="myInput" type="text"/>
       <input class="btn" type="button" value="Call RPC" onclick="callRPC();" />
     </div>
