--- a/src/demo_clients/websocket_js/index.html
+++ b/src/demo_clients/websocket_js/index.html
@@ -38,7 +38,7 @@
       }
       textarea {
         width: 100%;
-        margin-top: 5px;
+        margin-top: 10px;
         padding: 6px;
         border-radius: 5px;
         border: 1px #999 solid;
@@ -64,9 +64,12 @@
         line-height: calc(10px + 0.7vmin);
         margin-left: 20px;
       }
-      h3{font-size: 1.5rem;}
+      h3{
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+      }
       p {
-        font-size: calc(10px + 0.7vmin);
+        font-size: calc(10px + 0.6vmin);
         line-height: calc(10px + 1.0vmin);
         margin-bottom: 0.5rem;
       }
@@ -101,6 +104,9 @@
 }
       </code></pre>
       </div>
+      <p>
+        Try subscribing to <a href="https://nano-faucet.org">nano-faucet</a>: nano_34prihdxwz3u4ps8qjnn14p7ujyewkoxkwyxm3u665it8rg5rdqw84qrypzk
+      </p>
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <input id="myInput" type="text" placeholder="nano_xxx,nano_yyy"/>
       <input class="btn" type="button" value="Subscribe" onclick="callWebsocket();" />
