Better websocket client code

--- a/demo_clients/websocket_js/index.html
+++ b/demo_clients/websocket_js/index.html
@@ -109,8 +109,8 @@
       </p>
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <input id="myInput" type="text" placeholder="nano_xxx,nano_yyy"/>
-      <input class="btn" type="button" value="Subscribe" onclick="callWebsocket(false);" />
-      <input class="btn" type="button" value="Update" onclick="callWebsocket(true);" />
+      <input class="btn" type="button" value="Subscribe" onclick="callWebsocketSubscribe();" />
+      <input class="btn" type="button" value="Update" onclick="callWebsocketUpdate();" />
 
       <textarea id="myTextarea" rows="15"></textarea>
     </div>
